--- a/index.html
+++ b/index.html
@@ -5,18 +5,38 @@
     <meta charset="utf-8">
     <title>Shaders</title>
     <meta name="description" content="Shaders">
+<!-- only temporary -->
+<meta http-equiv="Cache-control" content="NO-CACHE">
     <script src="//a-frobot.github.io/aframe/dist/aframe-master.js"></script>
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/aframe/0.4.0/aframe.js"></script> -->
 
-    <script src="components/shaderfilesComponent.js"></script>
+    <script src="components/shaderfilesComponent.js?a=2"></script>
     <!-- <script src="shaders/sky.js"></script> -->
   </head>
   <script>
   </script>
 
     <body>
-      <a-scene>
+      <a-scene stats=true>
         <a-camera></a-camera>
+        <a-entity geometry="primitive: plane; height: 50; width: 50"
+          position="0 -0.5 0"
+          rotation="-90 0 0"
+          shaderfiles="filename: shaders/mrdoob2"
+          ></a-entity>
+
+          <a-entity geometry="primitive: plane; height: 1; width: 1"
+            position="-4 1 -3"
+            rotation="0 2 0"
+            shaderfiles="filename: shaders/shadertoy2"
+            ></a-entity>
+
+        <a-entity
+          geometry="primitive: box;"
+          position="-2 1 -3"
+          shaderfiles="filename: shaders/mrdoob3"
+          rotation="0 0 0">
+        </a-entity>
 
         <a-entity
           geometry="primitive: box;"
@@ -27,15 +47,8 @@
 
         <a-entity
           geometry="primitive: box;"
-          position="-2 1 -3"
-          shaderfiles="filename: shaders/2"
-          rotation="0 0 0">
-        </a-entity>
-
-        <a-entity
-          geometry="primitive: box;"
           position="2 1 -3"
-          shaderfiles="filename: shaders/4"
+          shaderfiles="filename: shaders/mrdoob1"
           rotation="0 0 0">
         </a-entity>
 
